# Artheris_UDP_Web

./: Cargo.toml
client/: .env  package-lock.json  package.json
client/src/components/: ModeSelector.tsx  MotorCard.tsx
client/src/hooks/: useFlightTime.ts
client/src/page/: AnglesDisplay.tsx  Dron3D.tsx  FlightDashboard.tsx  ModeSwitch.tsx  MotorSimulation.tsx  Profile.tsx  (+3 more)
logs/: artheris.log.2025-08-26  artheris.log.2025-08-28  artheris.log.2025-08-29  artheris.log.2025-08-31  artheris.log.2025-09-02  artheris.log.2025-09-04  artheris.log.2025-09-05  artheris.log.2025-09-14  artheris.log.2025-09-21  artheris.log.2025-09-23  artheris.log.2025-09-28  artheris.log.2025-10-21  artheris.log.2025-10-26  artheris.log.2025-10-28  artheris.log.2025-10-29  artheris.log.2025-10-30  artheris.log.2025-11-06  artheris.log.2025-11-10  artheris.log.2025-11-11  artheris.log.2025-11-13  artheris.log.2025-11-15  artheris.log.2025-11-16  artheris.log.2025-11-19  artheris.log.2025-11-20  artheris.log.2026-03-26  artheris.log.2026-03-28  artheris.log.2026-03-29  artheris.log.2026-03-30
src/: main.rs
src/analysis/: anomaly.rs  correlation.rs  fft.rs  historical.rs  mod.rs  recommendations.rs  score.rs  trend.rs  uncertainty.rs
src/config/: anomaly_types.rs  correlation_types.rs  function.rs  handlers.rs  historical_types.rs  metrics.rs  mod.rs  recommendation_types.rs  score_types.rs  spectrum_types.rs  trend_types.rs  uncertainty_types.rs
src/models/: experiment_metadata.rs  mod.rs
src/ws_server/: dataudp.rs  http_server.rs  ilp.rs  mod.rs  questdb.rs  server.rs  stats.rs
(+9 files in other folders)
