[package]
name = "Artheris"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
anyhow = "1.0"
serde_json = "1.0.142"
serde = { version = "1.0.219", features = ["derive"] }
axum = { version = "0.7", features = ["http1", "http2", "json", "macros"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tokio-sync = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
tracing-appender = "0.2"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
thiserror = "1.0"
http-body-util = "0.1.0"
urlencoding = "2.1.3"
once_cell = "1.19.0"